# recruiter-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260429_180741_initial_core_models.py  20260429_181111_initial_core_models.py  20260429_181524_auxiliary_models.py  20260429_181824_add_settings_singleton_check_constraint.py  20260501_120921_chat_messages_table.py  20260501_202924_settings_local_llm_api_key_enc.py  20260502_105307_users_sessions_oauth_states.py  20260503_000853_add_search_settings_columns.py  20260510_153437_add_enrichment_columns.py  20260510_225911_add_candidate_photo_url.py  20260514_000000_hash_session_tokens.py  20260515_220000_add_linkedin_cookie_columns.py  20260517_000000_linkedin_auto_reconnect.py  20260517_180000_proxycurl_key.py  20260517_190000_proxycurl_to_apify.py  20260517_200000_apify_actor_id.py  20260519_000000_rejection_reason.py
docker/: backend-entrypoint.sh
docs/: setup.md
recruiter-frontend/: .gitignore  Dockerfile  SMOKE.md  components.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
recruiter-frontend/e2e/: auth.spec.ts  edit-candidate.spec.ts  suggest-search-query.spec.ts
recruiter-frontend/scripts/: gen-types.sh
scripts/: e2e-power-user-kanban.mjs  e2e-search-tab.mjs  e2e-sourcing.mjs
searxng/: settings.yml
src/recruiter/: config.py  (+4 more)
tests/: conftest.py  test_health.py
(+303 files in other folders)
