[project]
name = "recruiter-agent"
version = "0.1.0"
description = "Recruiter assistant — Phase 1 backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "anthropic>=0.34",
  "httpx>=0.27",
  "PyMuPDF>=1.24",
  "python-docx>=1.1",
  "trafilatura>=1.10",
  "cryptography>=42",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  "google-api-python-client>=2.140",
  "google-auth>=2.34",
  "google-auth-oauthlib>=1.2",
  "icalendar>=5.0",
  "slowapi>=0.1.9",
  "redis>=5",
  "Authlib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-recording>=0.13",
  "testcontainers[postgres]>=4.4",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
